# pybind-example

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  wheels.yml
src/: CMakeLists.txt
src/pybind_example/: CMakeLists.txt
src/pybind_example/compute/: CMakeLists.txt  main.cpp
tests/: test.py  test_compute.py
