[tool.poetry]
name = "pybind-example"
version = "0.1.0"
description = "A test package using pybind11"
authors = ["Takeshi (Kesh) Ikuma <tikuma@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
build = "^0.3.1"
cmaketools = "^0.1.6"
setuptools = "^54.1.1"
wheel = "^0.36.2"

[build-system]
requires = ["cmaketools", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
