[metadata]
name=pybind_example
version=0.2.0
author=Takeshi (Kesh) Ikuma
author_email=tikuma@gmail.com
description=A test package using pybind11
url=https://github.com/python-cmaketools/pybind-example.git
license=MIT

[build_ext]
src_dir=src
ext_module_hint=pybind11_add_module
has_package_data=False
